<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@color/lightBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".fragments.FakePaymentFragment">

    <ImageView
        android:id="@+id/backArrowForPayment"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="88dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/cardNumberInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="-2dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNumberInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number"
            android:inputType="number"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expiryDateInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expiryDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mm_yy"
            android:inputType="date"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cvvInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expiryDateInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterCvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv"
            android:inputType="number"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/paymentBtn"
        android:layout_width="193dp"
        android:layout_height="57dp"
        android:layout_gravity="start"
        android:enabled="true"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvvInputLayout"
        app:layout_constraintVertical_bias="0.105" />

</androidx.constraintlayout.widget.ConstraintLayout>